Add three recipe html pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <h1>Odin Recipes</h1>
+    <a href = "recipes/tresLeches.html" target ="_blank">Tres Leches Cake</a><p></p>
+    <a href = "recipes/pepperoniPizza.html" target ="_blank">Pepperoni Pizza</a><p></p>
+    <a href = "recipes/beefWellington.html" target ="_blank">Beef Wellington</a><p></p>
 
 </body>
 
