Update index.html and tresLeches.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 
 <body>
 
-    <h1>Odin Recipes</h1>
-    <a href = "recipes/tresLeches.html" target ="_blank">Tres Leches Cake</a><p></p>
-    <a href = "recipes/pepperoniPizza.html" target ="_blank">Pepperoni Pizza</a><p></p>
-    <a href = "recipes/beefWellington.html" target ="_blank">Beef Wellington</a><p></p>
+    <h1>Three of My Favorite Recipes</h1>
+    <img src = "images/gordonRamsay.jpg" alt = "Tres Leches Cake" 
+        width="350" height ="350">
+    <h2>Recipes</h2>
+    <ul>
+        <li><a href = "recipes/tresLeches.html">Tres Leches Cake</a></li>
+        <li><a href = "recipes/pepperoniPizza.html">Pepperoni Pizza</a></li>
+        <li><a href = "recipes/beefWellington.html">Beef Wellington</a></li>
+    </ul>
 
 </body>
 
