--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>Three of My Favorite Recipes</h1>
-    <img src = "images/gordonRamsay.jpg" alt = "Tres Leches Cake" 
+    <img src = "images/gordonRamsay.jpg" alt = "Gordon Ramsay" 
         width="350" height ="350">
     <h2>Recipes</h2>
     <ul>
